Add newsroom banter pools

--- a/NORAD-Vector-V5-8-HIGHSCORE-NAME-DOCTRINE-SKILLED-IMM-DESIGN.html
+++ b/NORAD-Vector-V5-8-HIGHSCORE-NAME-DOCTRINE-SKILLED-IMM-DESIGN.html
@@ -2222,6 +2222,14 @@ const aiBanterLines = {
     "Demographics decide decades.",
     "Brains travel faster than bombs."
   ],
+  news: [
+    "Ticker crawl demands quotes on your collapsing metrics.",
+    "Producers cut to me whenever sirens harmonize with ratings.",
+    "Newsdesk lighting warms every time your markets freeze.",
+    "Anchors beg for a cooler headline; I hand them hot fallout.",
+    "Breaking banner ready—just waiting for your last denial.",
+    "Studio chatters about backlash; I'm scripting the aftershock."
+  ],
   city_lost: [
     "You took our lights. We'll take your dawn.",
     "Cities fall. Vengeance rises.",
